--- a/report.html
+++ b/report.html
@@ -259,10 +259,6 @@
 </head>
 
 <body>
-    <div style="text-align: center;">
-        <p id="ui_D_1">D-1總：</p>
-        <p id="ui_D_2">D-2總評：</p>
-    </div>
     <table width="100%" style="margin: 40px 0px 40px 0px;">
         <tr>
             <td style="width: 25%; text-align: center;">
@@ -278,6 +274,11 @@
         </tr>
     </table>
     <div id="table_canvas">
+        <div style="text-align: center;">
+            <p>6.D區靜態文字</p>
+            <p id="ui_D_1"></p>
+            <p id="ui_D_2"></p>
+        </div>
         <div class="container">
             <div class="card-columns card-columns-header">
                 <div class="card card-grid-top" id="card-C-2">
@@ -377,15 +378,22 @@
                 </div>
             </div>
         </div>
+        <br>
+        <div style="text-align: center; display: block;">
+                <div><a id="downloadReport" href="#">下載至裝置中</a></div>
+                <div><a id="back" href="index.html">重新填問卷(之後會拿掉)</a></div>
+                <br>
+        </div>
+        <div style="text-align: center;">
+            <p>5. 新增靜態圖文：</p>
+            <p>優氧循環，是個將優氧醫學的知識化為行動，用於改善慢性缺氧的方法。 由於每個人的生活型態和身體狀態並不是固定不變的，為了讓計劃跟得上變化，若能循環執行這三步驟，可以更正確的找出問題、更精準的設計方案，創造更好的成果。 如何改善缺氧？反覆執行優氧循環而已。</p>
+        </div>
     </div>
-    <br>
     <div style="text-align: center;">
-        <div>
-            <a id="downloadReport" href="#">下載 (12宮格頁面)</a>
-        </div>
-        <div>
-            <a id="back" href="index.html">重新填問卷</a>
-        </div>
+        <p>9. E 區靜態圖文資訊： </p>
+        <p>
+            【你的健康問題，新科技能解】 奧斯帝摩・優氧手環 核心元件的奧斯帝摩ＩＣ晶片(中華民國發明專利第I586400號)將「氣以行血」的中醫理論化為穩定可靠的科技產品，調節神經、活絡血脈；具科學依據及發明專利，促進血液循環，改善體內缺氧。 【進階預約免費熱濕寒微循環檢測】 「微循環」是氧氣供給的場域，也是缺氧治療上長久無法攻克的最後一哩路。而禍亂起於忽微，異常微循環常是缺氧的警訊；客觀的微循環檢測可輔助主觀的專家系統，更精準判讀缺氧程度。 改善缺氧，從微循環開始→https://lihi.cc/mjaAa 【有疑惑嗎？讓專家幫助你】 依世界衛生組織的調查， 慢性病預防經費：疾病形成後醫療經費＝1 : 100 預防永遠勝於治療，改善缺氧，刻不容緩。 想深入瞭解嗎？歡迎與我們聯絡。 www.oxygener.com FB：優氧專家・奧斯帝摩 LINE ID：@oxygener TEL：06-2979053 E-MAIL：service@oxygener.com
+        </p>
     </div>
 </body>
 
