modify: 修正單項分數10分時，沒有列入計算

--- a/report.html
+++ b/report.html
@@ -11,7 +11,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="js/js.cookie.js"></script>
     <script src="js/html2canvas.js"></script>
-    <script src="js/formula.js"></script>
+    <script src="js/formula1.js"></script>
     <script type="text/javascript">
     var gFormID = '1FAIpQLSf61A3kcoDVT929bta3X01AMaz4ieTDYwL2Ehz9FoHVuaIVnw'; //google 表單ID [for test CopyDown + Gmerge 版本 (Responses)]
     var gSheetParam = {}; //google sheet所需要的參數
@@ -378,16 +378,18 @@
                 </div>
             </div>
         </div>
+    
+    <br>
+    </div>
+    <div style="text-align: center; display: block;">
+        <div><a id="downloadReport" href="#">下載至裝置中</a></div>
+        <div><a id="back" href="index.html">重新填問卷(之後會拿掉)</a></div>
         <br>
-        <div style="text-align: center; display: block;">
-                <div><a id="downloadReport" href="#">下載至裝置中</a></div>
-                <div><a id="back" href="index.html">重新填問卷(之後會拿掉)</a></div>
-                <br>
-        </div>
-        <div style="text-align: center;">
-            <p>5. 新增靜態圖文：</p>
-            <p>優氧循環，是個將優氧醫學的知識化為行動，用於改善慢性缺氧的方法。 由於每個人的生活型態和身體狀態並不是固定不變的，為了讓計劃跟得上變化，若能循環執行這三步驟，可以更正確的找出問題、更精準的設計方案，創造更好的成果。 如何改善缺氧？反覆執行優氧循環而已。</p>
-        </div>
+    </div>
+    <div style="text-align: center;">
+        <p>5. 新增靜態圖文：</p>
+        <p>優氧循環，是個將優氧醫學的知識化為行動，用於改善慢性缺氧的方法。 由於每個人的生活型態和身體狀態並不是固定不變的，為了讓計劃跟得上變化，若能循環執行這三步驟，可以更正確的找出問題、更精準的設計方案，創造更好的成果。 如何改善缺氧？反覆執行優氧循環而已。
+        </p>
     </div>
     <div style="text-align: center;">
         <p>9. E 區靜態圖文資訊： </p>
