--- a/report.html
+++ b/report.html
@@ -11,7 +11,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="js/js.cookie.js"></script>
     <script src="js/html2canvas.js"></script>
-    <script src="js/formula2.js"></script>
+    <script src="js/formula3.js"></script>
     <script type="text/javascript">
     var gFormID = '1FAIpQLSeX5u0zEiV5Ik9wsY2zm7XeEHOrD3_yN6mztdzVttHoMrikkw'; //google 表單ID [for test CopyDown + Gmerge 版本 (Responses)]
     var gSheetParam = {}; //google sheet所需要的參數
@@ -24,7 +24,8 @@
         initGetParam();
         initConfig();
         initDownloadButton();
-        sendGoogleSheet();
+        // sendGoogleSheet();//todo暫時拿掉
+
         function initConfig() {
             console.log('initConfig()');
             // 讀取config檔案
@@ -184,7 +185,7 @@
         }
     });
 
-    
+
 
     //1.將http get參數存放到物件「gSheetParam」
     //2.同時組合出google sheet url
@@ -193,8 +194,8 @@
         var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
         // vars = [];
         //todo 這裡姓名目前hardcode，要改成動態的
-        gSheetParam['entry.1028026856'] = '蔡宜成';//姓名
-        gSheetParam['entry.618980278'] = '01/10/2018';//date
+        gSheetParam['entry.1028026856'] = '蔡宜成'; //姓名
+        gSheetParam['entry.618980278'] = '01/10/2018'; //date
 
         // &entry.1028026856=蔡宜成&entry.618980278=01/10/2018
         var hash; //目前不清楚vars型別是什麼?怎麼使用?
@@ -218,7 +219,7 @@
     function sendGoogleSheet() {
 
         // console.log('gSheetParam=' + JSON.stringify(gSheetParam));
-        console.log('https://docs.google.com/forms/d/e/' + gFormID + '/formResponse?'+JSON.stringify(gSheetParam));
+        console.log('https://docs.google.com/forms/d/e/' + gFormID + '/formResponse?' + JSON.stringify(gSheetParam));
         $.ajax({
             url: 'https://docs.google.com/forms/d/e/' + gFormID + '/formResponse',
             data: gSheetParam,
@@ -273,9 +274,11 @@
                 <img src="image/report/logo.jpg">
             </td>
             <td style="width: 50%;text-align: center;">
-                <div style="color: #34d6b7; font-size: 1.0em">My Oxygener Report
+                <div class="font-blod" id="ui_title_top">My Oxygener Report
                 </div>
-                <div style="color: #404040; font-size: 3.0em">優氧報告結果：
+                <div class="font-blod" id="ui_title_middle">個人化改善方案
+                </div>
+                <div class="font-blod" id="ui_title_bottom">優氧循環表
                 </div>
             </td>
             <td style="width: 25%;text-align: center;"></td>
@@ -283,18 +286,14 @@
     </table>
     <div id="table_canvas">
         <div style="text-align: center;">
-            <p>6.D區靜態文字</p>
-            <p id="ui_D_1"></p>
-            <p id="ui_D_2"></p>
+            <p class="font-blod" id="ui_D_1"></p>
+            <p class="font-blod" id="ui_D_2"></p>
         </div>
         <div class="container">
             <div class="card-columns card-columns-header">
                 <div class="card card-grid-top" id="card-C-2">
                     <div class="card-body">
                         <h4 class="card-title text-center" id="card-title-C-2">創造有利條件的方法</h4>
-                        <!-- <p class="card-text ui_C_2">顯然您已成功克服那些在生活中經常阻礙我們達成目標的誘惑！</p>
-                        <p class="card-text ui_C_2"></p>
-                        <p class="card-text ui_C_2"></p> -->
                         <p id="card-C-2-default">顯然您已成功克服那些在生活中經常阻礙我們達成目標的誘惑！</p>
                         <ol>
                             <li class="card-text ui_C_2"></li>
@@ -306,9 +305,6 @@
                 <div class="card card-grid-top" id="card-C-1">
                     <div class="card-body">
                         <h4 class="card-title text-center" id="card-title-C-1">聚焦內在的方法</h4>
-                        <!-- <p class="card-text ui_C_1">「目標」是行為的趨力，顯然您已確實掌握目標，毋忘初衷。</p>
-                        <p class="card-text ui_C_1"></p>
-                        <p class="card-text ui_C_1"></p> -->
                         <p id="card-C-1-default">「目標」是行為的趨力，顯然您已確實掌握目標，毋忘初衷。</p>
                         <ol>
                             <li class="card-text ui_C_1"></li>
