--- a/report.html
+++ b/report.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/report.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -424,13 +425,48 @@
     </div>
 
     <div class="text-center mt-5">
-        <a href="https://lihi.cc/mjaAa"><img src="image/report/btn_restart.jpg"></a>
+        <a href="https://lihi.cc/mjaAa"><img class="img-fluid p-3" alt="Responsive image" src="image/report/btn_reservation.jpg"></a>
     </div>
-
     <div class="text-center mt-5">
         <img class="img-fluid" alt="Responsive image" src="image/report/content_bottom.jpg">
     </div>
-
+    <!-- Footer -->
+    <section id="footer">
+        <div class="container">
+            <div class="row text-center text-xs-center text-sm-left text-md-left align-items-end">
+                <div class="col-xs-12 col-sm-4 col-md-4 mt-5">
+                    <img  class="img-fluid p-3" alt="Responsive image" src="image/report/footer_logo.png">
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <ul class="list-unstyled list-inline social text-center">
+                        <li class="list-inline-item p-3"><a href="https://zh-tw.facebook.com/Oxygener.fanpage/"><i class="fa fa-facebook"></i></a></li>
+                        <li class="list-inline-item p-3"><a href="https://www.instagram.com/shirleyoxygen/"><i class="fa fa-instagram"></i></a></li>
+                        <li class="list-inline-item p-3"><a href="mailto:service@oxygener.com"><i class="fa fa-envelope"></i></a></li>
+                    </ul>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <a href="tel:+88662979053">
+                        <img  class="img-fluid p-3" alt="Responsive image" src="image/report/footer_tel.png">
+                    </a>
+                    <a href="mailto:service@oxygener.com">
+                        <img  class="img-fluid p-3" alt="Responsive image" src="image/report/footer_email.png">
+                    </a>
+                    <a href="https://www.oxygener.com">
+                        <img  class="img-fluid p-3" alt="Responsive image" src="image/report/footer_web.png">
+                    </a>
+                </div>
+            </div>
+            
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
+                    <p>本網站文字圖片版權所有為奧斯帝摩生醫科技股份有限公司 轉載必究</p>
+                    <p class="h6">Taiwan Oxygener Biomedical Tech. Co., Ltd.©2018 Copyright. All Rights Reserved
+                </div>
+                </hr>
+            </div>
+        </div>
+    </section>
+    <!-- ./Footer -->
 </body>
 
 </html>
