modify: 1.修正問卷頁CSS

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
     
     <!-- page2 -->
-    <div class="page container-fluid text-center">
+    <div class="page container text-center">
         <!-- flow image -->
         <img class="img-fluid mt-5" alt="Responsive image" src="image/index/flow.jpg">
         <!-- progress image -->
