--- a/report.html
+++ b/report.html
@@ -26,7 +26,7 @@
 
 <body>
     <div id="loading">
-        <img class="img-fluid" alt="Responsive image" src="image/report/loading.jpg">
+        <img id="loadingimg" class="img-fluid" alt="Responsive image" src="image/report/loading.jpg">
     </div>
 
 
